# rust-HSE

./: .gitignore  Cargo.toml  README.md
.github/: pull.yml
.github/workflows/: _sync-forks.yml  main.yml  sync-forks.yml
docs/: reading-list.md
problems/basics/bracket_sequence/: Cargo.toml  README.md
problems/basics/bracket_sequence/src/: lib.rs
problems/basics/bracket_sequence/tests/: tests.rs
problems/basics/fibonacci/: Cargo.toml  README.md
problems/basics/fibonacci/src/: lib.rs
problems/basics/fibonacci/tests/: tests.rs
problems/basics/palindrome/: .config.yml  Cargo.toml  README.md
problems/basics/palindrome/src/: lib.rs
problems/basics/palindrome/tests/: tests.rs
problems/basics/prime_numbers/: Cargo.toml  README.md
problems/basics/prime_numbers/src/: lib.rs
problems/basics/prime_numbers/tests/: tests.rs
problems/cargo/cargo/: .config.yml  Cargo.toml  README.md
problems/cargo/cargo/src/: config.rs  lib.rs  trait.rs
problems/cargo/cargo/tests/: my_test.json  tests.json  tests.rs
problems/iterators/basics/: Cargo.toml  README.md
problems/iterators/basics/src/: lib.rs
problems/iterators/basics/tests/: tests.rs
problems/iterators/flatten2/: Cargo.toml  README.md
problems/iterators/flatten2/src/: lib.rs
problems/iterators/flatten2/tests/: tests.rs
problems/iterators/shrek/: Cargo.toml  README.md  shrek.txt
problems/iterators/shrek/src/: lib.rs
problems/iterators/shrek/tests/: tests.rs
problems/iterators/split/: README.md
problems/iterators/split/src/: lib.rs
problems/iterators/split/tests/: tests.rs
problems/net/chat/: Cargo.toml  README.md
problems/net/chat/src/: lib.rs  main.rs
problems/net/roshambo/: Cargo.toml  README.md
problems/net/roshambo/src/: lib.rs  main.rs
problems/net/roshambo/tests/: tests.rs
problems/ownership/add_references/: Cargo.toml  README.md
problems/ownership/add_references/src/: lib.rs
problems/ownership/add_references/tests/: tests.rs
problems/ownership/flatten/: .config.yml  Cargo.toml  README.md
problems/ownership/flatten/src/: lib.rs
problems/ownership/flatten/tests/: tests.rs
problems/ownership/kolhoz_hashmap/: .config.yml  Cargo.toml  README.md
problems/ownership/kolhoz_hashmap/src/: hashmap.rs  lib.rs  types.rs
problems/ownership/where_k_th_ordinal_element_greater/: Cargo.toml  README.md
problems/ownership/where_k_th_ordinal_element_greater/src/: lib.rs
problems/ownership/where_k_th_ordinal_element_greater/tests/: tests.rs
problems/projects/kafka/: Cargo.toml
problems/projects/kafka/src/: errors.rs  lib.rs  main.rs  structures.rs
problems/projects/kafka/tests/: integration_tests.rs  tests.rs
problems/projects/mmv/: Cargo.toml
problems/projects/mmv/src/: errors.rs  file_wrapper.rs  lib.rs  main.rs  parser.rs
problems/projects/mmv/tests/: pomoyka.rs  tests.rs
problems/structs/lru_cache/: Cargo.toml  README.md
problems/structs/lru_cache/src/: lib.rs
problems/structs/lru_cache/tests/: tests.rs
problems/structs/minmax_queue/: Cargo.toml  README.md
problems/structs/trust/: README.md
problems/structs/trust/src/: lib.rs
problems/threads/sequential/: README.md
problems/threads/threadpool/: README.md
problems/tutorial/add/: README.md
seminars/group-2/tcp_proxy/: Cargo.toml
tools/kafka_publisher/: Cargo.toml
tools/kafka_publisher/src/: main.rs
tools/kafka_subscriber/: Cargo.toml
tools/kafka_subscriber/src/: main.rs
tools/rover/: Cargo.toml
tools/rover/src/: main.rs
tools/rover/src/compose/: config.rs  file.rs  process.rs  run_compose.rs
tools/rover/src/repository/: command.rs  config.rs  problem.rs  repo.rs  toolchain.rs
tools/rover/src/submitting/: submit.rs
tools/rover/src/testing/: report.rs
tools/rover/src/util/: check_version.rs  mod.rs
(+17 files in other folders)
