[workspace]
members = [
    # Problems
    "problems/tutorial/add",
    "problems/projects/mmv",
    "problems/basics/fibonacci",
    "problems/basics/palindrome",
    "problems/basics/prime_numbers",
    "problems/basics/bracket_sequence",
    "problems/ownership/add_references",
    "problems/ownership/where_k_th_ordinal_element_greater",
    "problems/ownership/flatten",
    "problems/ownership/kolhoz_hashmap",
    "problems/structs/lru_cache",
    "problems/structs/trust",
    "problems/structs/minmax_queue",
    "problems/cargo/cargo",
    "problems/iterators/basics",
    "problems/iterators/shrek",
    "problems/iterators/flatten2",
    "problems/iterators/split",
    

    # Tools
    "tools/rover",

    # Additional
    "",
]
