[package]
name = "rover"
version = "0.3.3"
authors = [
    "Alexander Stanovoy <alex.stanovoy@gmail.com>",
    "Dmitrii Zakharov <dimaz1301@gmail.com>",
]
edition = "2021"

[features]
default = ["check-version"]
check-version = []

[dependencies]
anyhow = "1.0.53"
cargo_toml = "0.11"
clap = "3.1.0"
colored = "2.0"
glob = "0.3.0"
indoc = "1.0"
itertools = "0.10"
reqwest = { version = "0.11.9", default-features = false, features = ["rustls-tls", "blocking", "multipart"] }
serde = { version = "1.0.136", features = ["derive"] }
serde-tuple-vec-map = "1.0"
serde_json = "1.0"
serde_yaml = "0.8.23"
version-compare = "0.1"
