[package]
name = "kafka"
version = "0.1.0"
edition = "2021"



[[bin]]
name = "kafka"
path = "src/main.rs"

[lib]
name = "kafka_lib"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
simplelog = "0.12.1"
log = "0.4.20"
rand = { version = "0.8.5", features = [] }