[package]
name = "mmv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mmv"
path = "src/main.rs"

[lib]
name = "mmv_lib"
path = "src/lib.rs"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
regex = "*"
scan_dir = "*"
tempdir = "*"

